Varibles de produccion

--- a/.env
+++ b/.env
@@ -1,1 +1,5 @@
-VITE_API_URL = http://localhost:4000/api/events
+# Api url para desarrollo
+# VITE_API_URL = http://localhost:4000/api/events
+
+# Api url para proyecto en la nube
+VITE_API_URL = https://crm-app-backend.herokuapp.com/api/events
